--- a/hugo.yaml
+++ b/hugo.yaml
@@ -69,10 +69,9 @@ params:
         url: tags
 
   homeInfoParams:
-    Title: "Hey, I'm Noah 👋🏼 🎲 🌲"
+    Title: "Hi, I'm Noah 👋🏼 🎲 🌲"
     Content: >
-      I'm a PhD student in the Department of Math and Stats at McGill where I am supervised by <a href="https://elliotpaquette.github.io">Elliot Paquette</a>.
-      I work on machine learning relevant problems from a probabalistic perspective. I was born and raised in the Kootenays and I'm currently training for my first marathon.
+    I'm a PhD student in the Department of Mathematics and Statistics at McGill University, under the supervision of <a href="https://elliotpaquette.github.io">Elliot Paquette</a>. My research focuses on machine learning problems approached from a probabilistic perspective. Originally from the Kootenays, I'm also currently training for my first marathon.      
 
   socialIcons:
     - name: github
