add google analytics

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -92,9 +92,9 @@ params:
   # icon: icon.png
   # iconHeight: 35
 
-  # analytics:
-  #     google:
-  #         SiteVerificationTag: "XYZabc"
+  analytics:
+      google:
+          SiteVerificationTag: "G-9PVR62ZR0Q"
 
   assets:
     disableHLJS: true
